syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "ProductService";

service ProductServiceGrpc {
    rpc GetProductsByMultipleIds (GetProductByMultipleIdsRequest) returns (GetProductsByMultipleIdsResponse);
    rpc DecreaseProductsStocks (DecreaseProductsStocksRequest) returns (google.protobuf.Empty);
}

message GetProductByMultipleIdsRequest {
    repeated string ids = 1;
}

message DecreaseProductsStocksRequest {
	repeated GrpcProductStockDecreaseModel products = 1;
    string userId = 2;
}

message GrpcProductModel{
    string productId = 1;
    string name = 2;
    string description = 3;
}

message GrpcProductStockDecreaseModel {
    string productId = 1;
    string quantity = 2;
    string price = 3;
}

message GetProductsByMultipleIdsResponse {
    repeated GrpcProductModel products = 1;
}